@@ -1,5 +1,10 @@
-FROM hmctspublic.azurecr.io/base/java:11-distroless
+FROM hmctspublic.azurecr.io/base/java:17-distroless
 
 COPY build/libs/ccpay-scheduled-jobs.jar /opt/app/
 
 CMD ["ccpay-scheduled-jobs.jar"]
+
+CMD [ \
+    "--add-opens", "java.base/java.lang=ALL-UNNAMED", \
+    "ccpay-scheduled-jobs.jar" \
+    ]
